Mani/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: laravel-deployment
spec: 
  replicas: 2
  selector: 
    matchExpressions:
    - key: app
      operator: In
      values: 
      - laravel
  strategy: 
    rollingUpdate: 
      maxSurge: 25%
      maxUnavailable: 25%
  template: 
    metadata: 
      labels:
        app: laravel
      name: laravel-Pod
    spec: 
      containers: 
      - image: user/laravel
        name: laravel
        ports: 
         - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "500m"
          limits:
            memory: "128Mi"
            cpu: "500m"
